themes/knives-forks-theme/style.css
/* ... */
  @media all and (max-width: 499px) {
    .main-navigation .hidden-menu {
      display: none; } }
  @media only screen and (min-width: 500px) and (max-width: 999px) {
    .main-navigation .hidden-menu {
      display: none; } }
  @media all and (min-width: 1000px) {
    .main-navigation .hidden-menu {
      font-family: "Lato", sans-serif;
      z-index: 2;
      position: absolute;
      right: 0;
      text-align: right;
      background-color: #6f8f6a;
      width: 100%; }
      .main-navigation .hidden-menu .cross {
        padding: 1rem;
        font-size: 2rem;
        color: #fff; }
      .main-navigation .hidden-menu li {
        border-top: 1px solid #fff;
        width: 100%; }
        .main-navigation .hidden-menu li a {
          width: 100%;
          padding: 1rem;
          display: inline-block;
          position: relative;
          right: 0;
          color: #fff; }
          .main-navigation .hidden-menu li a:visited {
            color: #fff; }
          .main-navigation .hidden-menu li a:hover {
            background-color: #90c194; } }

.hide {
  display: none; }

.site-footer {
  padding: 0 0.5rem 0.75rem; }
  .site-footer .cityline {
    width: 100%; }
  .site-footer .info-links {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    margin: 0 auto;
    padding: 1.81rem 0 0 0; }
    .site-footer .info-links h4 {
      font-family: "Lora", serif;
      font-size: 0.75rem;
      text-transform: capitalize;
      color: #378244; }
      .site-footer .info-links h4 span {
        text-transform: lowercase; }
    .site-footer .info-links p {
      padding-bottom: 0.5rem;
      margin: 0;
      font-size: 0.688rem;
      text-transform: capitalize; }
      .site-footer .info-links p span {
        text-transform: lowercase; }
  .site-footer .subscribe {
    display: none; }
  .site-footer .desktop-logo {
    display: none; }
    @media all and (min-width: 1000px) {
      .site-footer .desktop-logo {
        display: block; } }
  .site-footer .mobile-logo {
    display: block; }
    @media all and (min-width: 1000px) {
      .site-footer .mobile-logo {
        display: none; } }
  .site-footer .logo-container {
    margin: 0 auto;
    width: 270px; }
    .site-footer .logo-container img {
      padding-left: 1rem; }
    .site-footer .logo-container .copyright {
      width: 270px;
      margin: -1.25rem 0 0 0;
      font-size: 0.5rem;
      text-align: center; }
      .site-footer .logo-container .copyright span {
        text-transform: capitalize; }

@media all and (min-width: 1000px) {
  .site-info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    padding: 1.68rem 0 0 0; }
    .site-info .info-links {
      padding: 0;
      width: 280px;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap; }
      .site-info .info-links h4 {
        margin: 0 0 1rem 0; }
    .site-info .subscribe {
      display: block;
      width: 369px; }
      .site-info .subscribe h5 {
        font-size: 1.125rem;
        font-family: "Lato", sans-serif;
        margin: 0; }
      .site-info .subscribe p {
        font-size: 0.625rem;
        margin: 0; }
      .site-info .subscribe .email-form {
        position: relative;
        margin: 1.5rem 0; }
        .site-info .subscribe .email-form .email-field {
          border: 1px solid #dee3db;
          width: 85%;
          padding: 0.5rem;
          border-radius: 2rem; }
        .site-info .subscribe .email-form .sub-btn {
          position: absolute;
          width: 28%;
          right: 5px;
          top: 0;
          padding: 1rem 0;
          border-radius: 0 2rem 2rem 0;
          color: #fff;
          background-color: #378244;
          font-family: "Lato", sans-serif; }
    .site-info .logo-container .desktop-logo {
      padding: 0.3rem 0 0 0;
      margin: 0 auto; }
    .site-info .logo-container .copyright {
      padding: 2rem 0 0 0; } }

.copy-title {
  font-weight: 600;
  font-size: 1.75rem; }
  @media all and (min-width: 1000px) {
    .copy-title {
      font-size: 2.5rem; } }

.copy-subtitle {
  color: #296133;
  font-size: 1.25rem; }

.copy-text {
  font-weight: 100;
  line-height: 1rem;
  text-align: unset; }

.custom-copy-block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin-top: 100px;
  margin-bottom: 100px; }
  @media all and (min-width: 1000px) {
    .custom-copy-block {
      -webkit-box-orient: horizontal;
      -webkit-box-direction: normal;
          -ms-flex-direction: row;
              flex-direction: row;
      -webkit-box-pack: justify;
          -ms-flex-pack: justify;
              justify-content: space-between; } }
  .custom-copy-block .copy-block-content {
    -webkit-box-ordinal-group: 2;
        -ms-flex-order: 1;
            order: 1;
    position: relative;
    top: -50px; }
    @media all and (min-width: 1000px) {
      .custom-copy-block .copy-block-content {
        width: 100%;
        position: relative;
        padding-right: 50px;
        margin: auto 5%;
        top: 0; } }
    @media all and (min-width: 1000px) {
      .custom-copy-block .copy-block-content .copy-block-text {
        position: relative;
        top: -60px;
        width: 100%; } }
    @media all and (min-width: 1000px) {
      .custom-copy-block .copy-block-content .copy-block-text .copy-title {
        position: relative; } }
    @media all and (min-width: 1000px) {
      .custom-copy-block .copy-block-content .copy-block-text .copy-text {
        position: relative;
        top: 40px; } }
/* ... */

